# ICESPICE

./: .gitignore  AllModifiedOutputs.root  CMakeLists.txt  Fold.C  GNUmakefile  ICESPICE.cc  ICESPICE.mac  LICENSE  MiniOrange.cc  Plots.C  README  README.md  bi207.mac  comsol_to_geant_table.py  electrons.mac  geant4_setup_11.2.0_macOS.sh  geant4_setup_11.3.2_macOS.sh  geant4analyzer.py  gui.mac  pb207 .mac  plotHisto.C  processRuns.C  transmission_prob_macro.mac  vis.mac
207Bi/: 207Bi_ICESPICE_f70mm_g30mm_run_15.parquet  analysis.py  best_simulation_plot.py  bi207.mac  custom_gps_ce_source.mac  plots.py
207Pb/: analysis.py  pb207.mac  pb207_pips1000.mac  pb207_pips300.mac  pb207_pips500.mac  run87_RadDecay_z82_a207_e1633keV_f70mm_g30mm_n1000000000_PIPS1000_PointSource.root  run88_RadDecay_z82_a207_e1633keV_f70mm_g30mm_n1000000000_PIPS1000_PointSource.root  run89_RadDecay_z82_a207_e1633keV_f70mm_g30mm_n10000000_PIPS1000_PointSource.root  run90_RadDecay_z82_a207_e1633keV_f70mm_g30mm_n1000000_PIPS1000_PointSource.root  run91_RadDecay_z82_a207_e1633keV_f70mm_g25mm_n1000000000_PointSource_PIPS300.root  run92_RadDecay_z82_a207_e1633keV_f70mm_g25mm_n1000000000_PointSource_PIPS300_5N42_1x1x1_16in.root  run93_RadDecay_z82_a207_e1633keV_f70mm_g25mm_n100000000_PointSource_PIPS300_6N42_1x1x1_16in.root  z82_a207_e1633keV_f70mm_g25mm_n15648_PointSource_PIPS1000.root  z82_a207_e1633keV_f70mm_g25mm_n15648_PointSource_PIPS500.root  z82_a207_e2339keV_f70mm_g25mm_n47863_PointSource_PIPS1000.root  z82_a207_e2339keV_f70mm_g25mm_n47863_PointSource_PIPS500.root  z82_a207_e569keV_f70mm_g25mm_n101015_PointSource_PIPS1000.root  z82_a207_e569keV_f70mm_g25mm_n101015_PointSource_PIPS500.root  z82_a207_e897keV_f70mm_g25mm_n219438_PointSource_PIPS1000.root  z82_a207_e897keV_f70mm_g25mm_n219438_PointSource_PIPS500.root
BackScattering/: BackScattering_f0mm_g10mm_n100000_PIPS1000_PointSource_Zdirection_1000keV.root  BackScattering_f0mm_g10mm_n100000_PIPS100_PointSource_Zdirection_1000keV.root  BackScattering_f0mm_g10mm_n100000_PIPS300_PointSource_Zdirection_1000keV.root  BackScattering_f0mm_g10mm_n100000_PIPS500_PointSource_Zdirection_1000keV.root  analysis.py  backscattering.mac
ICESPICE_Demonstrator_Simulations/: PIPS1000_transmission_prob_macro.mac  PIPS1000_transmission_prob_macro_with_ICESPICE.mac  PIPS1000_transmission_prob_macro_without_ICESPICE.mac  PIPS500_transmission_prob_macro_with_ICESPICE.mac  PIPS500_transmission_prob_macro_without_ICESPICE.mac  generate_macro.py  pips1000_transmission_prob.mac  pips300_transmission_prob.mac  pips500_transmission_prob.mac  run_1_207Bi_PIPS500.mac  run_1_PIPS500_f68mm_g28mm_n10000000.root  run_1_PIPS500_f68mm_g28mm_n100000000.root  run_1_PIPS500_f70mm_g30mm_n10000000.root  run_1_PIPS500_f70mm_g30mm_n100000000.root  run_1_PIPS500_f72mm_g32mm_n10000000.root  run_1_PIPS500_f72mm_g32mm_n100000000.root  run_2_207Bi_PIPS500.mac  run_2_PIPS500_f68mm_g28mm_n100000000.root  run_2_PIPS500_f70mm_g30mm_n100000000.root  run_2_PIPS500_f72mm_g32mm_n100000000.root  run_55_207Bi.mac  run_55_PIPS1000_f68mm_g28mm_n100000000.root  run_55_PIPS1000_f70mm_g30mm_n100000000.root  run_55_PIPS1000_f70mm_g30mm_n1000000000_207BiThickness1000nm_Cut1um_AllElectrons_theta0_phi0.root  run_55_PIPS1000_f70mm_g30mm_n1000000000_207BiThickness1nm_Cut1um_AllElectrons_theta0_phi0.root  run_55_PIPS1000_f70mm_g30mm_n1000000000_207BiThickness1nm_Cut1um_AllElectrons_theta0_phi0_850umthick.root  run_55_PIPS1000_f70mm_g30mm_n1000000000_207BiThickness1nm_Cut1um_AllElectrons_theta0_phi0_900umthick.root  run_55_PIPS1000_f72mm_g26mm_n100000000_207BiThickness1000nm_Cut1um_AllElectrons_theta0_phi0.root  run_56_207Bi.mac  (+75 more)
(+3893 files in other folders)
